[gd_scene load_steps=10 format=3 uid="uid://cb8gaqkqxk0jc"]

[ext_resource type="Script" uid="uid://cxj67kgiqqrs2" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="AudioStream" uid="uid://ckk16undrmmvp" path="res://assets/sfx/click.wav" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://c2ddtpp6fbhee" path="res://assets/sfx/laserShoot.wav" id="3_qhqgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u8vuu"]

[sub_resource type="Animation" id="Animation_ctckn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-24, -19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Number:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}

[sub_resource type="Animation" id="Animation_3vyb7"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-24, -19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Number:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1u5is"]
resource_name = "movement"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(9.68575e-08, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-30, -19), Vector2(-27, -22), Vector2(-24, -25), Vector2(-21, -22), Vector2(-24, -19), Vector2(-30, -19), Vector2(-27, -22), Vector2(-24, -25), Vector2(-21, -22), Vector2(-24, -19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Number:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(9.68575e-08, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.523598, -0.261799, 0.261799, 0.523599, 3.8743e-07, -0.523598, -0.261799, 0.261799, 0.523599, 3.8743e-07]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k6nth"]
_data = {
&"RESET": SubResource("Animation_ctckn"),
&"idle": SubResource("Animation_3vyb7"),
&"movement": SubResource("Animation_1u5is")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3vyb7"]
radius = 11.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="Number" type="Label" parent="."]
offset_left = -24.0
offset_top = -19.0
offset_right = 24.0
offset_bottom = 13.0
rotation = -0.261799
pivot_offset = Vector2(24, 16)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_u8vuu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k6nth")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="BulletSpawnpoint" type="Marker2D" parent="."]
visible = false
position = Vector2(-14, -3)
gizmo_extents = 40.0

[node name="Hurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_3vyb7")

[node name="ShiftSFX" type="AudioStreamPlayer" parent="."]

[node name="WalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g2els")
volume_db = -15.0

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
